# aoc

./: Cargo.toml
src/: day1.rs  day2.rs  day3.rs
